# Persistence1D

./: CMakeLists.txt  README.md
doc/: Doxyfile
doc/html/: _files_and_filters_8cpp-example.html  _files_and_filters_8cpp.html  _files_and_filters_8cpp_source.html  _matlab_interface.html  _matlab_visualization_8cpp-example.html  _matlab_visualization_8cpp.html  _matlab_visualization_8cpp_source.html  _reconstruct1d__main.html  _reconstruct1d_advanced_example_8m-example.html  _reconstruct1d_basic_example_8m-example.html  _reconstruct1d_data_weights_8m-example.html  _simple_data_vector_8cpp-example.html  _simple_data_vector_8cpp.html  _simple_data_vector_8cpp_source.html  annotated.html  classes.html  classp1d_1_1_persistence1_d-members.html  classp1d_1_1_persistence1_d.html  dir_01be9842d4d0b671fa6c7119fe8243a6.html  dir_2969d0dc83a9ec752e7898f0f852ea44.html  dir_2aaac7bd8e7c9fb0617ebf30722f62d8.html  dir_363c7dd63633bc0b67762e7ff7b5a8f6.html  dir_46ab56255c4804d93cb4e9c65c10c4a4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e931c1a3f0014e624d0645a271726ad2.html  examples.html  files.html  functions.html  (+28 more)
matlab/: get_max_indices.m  get_min_indices.m  matlab.dox  run_persistence1d.cpp
reconstruct1d/: build_equality_constraints.m  build_inequality_constraints.m  build_laplacian.m  build_monotonicity_graph.m  plot_reconstructed_data.m  plot_reconstructed_data_with_equality_constraints.m  reconstruct1d.dox  reconstruct1d.m  reconstruct1d_with_persistence_res.m  setup_persistence1d.m  turn_off_mosek.m  turn_on_mosek.m
src/: CMakeLists.txt  persistence1d.sln
(+73 files in other folders)
